dashboard/traefik-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-path
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /traefik
        pathType: Exact
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 80
